[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whitening"
version = "0.2.0"
description = "Scikit-learn compatible whitening (sphering) transformations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Severin Langberg", email = "langberg91@gmail.com" }
]
keywords = ["whitening", "sphering", "preprocessing", "scikit-learn", "ZCA", "PCA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[project.urls]
Source = "https://github.com/GSEL9/whitening"

[tool.setuptools.packages.find]
where = ["."]
include = ["whitening*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
